2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Remove unused GnomeVFSHandle stuff
	
2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Forgot to change GnomeVFSResult to GError in
	one spot.

007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        Implement nautilus_file_set_owner and nautilus_file_set_group
	using set_attributes
	

2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        Implement nautilus_file_set_permissions using
	nautilus_file_set_attributes.

2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
        Add nautilus_file_set_attributes

2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-vfs-utils.[ch]:
	Add gnome_vfs_result_to_error call
	
        * libnautilus-private/nautilus-file.[ch]:
	Convert renaming to use gio.
	Pass GError instead of GnomeVFSResult in
	NautilusFileOperationCallback
	
        * src/file-manager/fm-error-reporting.c:
        * src/file-manager/fm-error-reporting.h:
        * src/file-manager/fm-list-view.c:
        * src/file-manager/fm-properties-window.c:
	Update to the NautilusFileOperationCallback API change

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	Read can_delete and can_rename from gio.
	Use can_rename in nautilus_file_can_rename.

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
	Add nautilus_file_get_edit_name()

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.[ch]:
	Make string args const char * where possible.

        * libnautilus-private/nautilus-desktop-icon-file.c: